--- a/aphmau-proposal.html
+++ b/aphmau-proposal.html
@@ -1368,17 +1368,17 @@ footer{page-break-before:always}
 <div class="backlog-tier">
 <div class="backlog-tier-header"><span class="badge badge-essential">Priority</span><h4>Core Universe</h4><span class="backlog-tier-hours">~113 hrs</span></div>
 <table>
-<thead><tr><th>Series</th><th class="col-eps">Episodes</th><th class="col-eps">Hours</th><th>Status</th></tr></thead>
+<thead><tr><th>Series</th><th class="col-eps">Episodes</th><th class="col-eps">Hours</th></tr></thead>
 <tbody>
-<tr><td>MyStreet S1</td><td class="col-eps">35</td><td class="col-eps">10</td><td>Complete</td></tr>
-<tr><td>MyStreet S2: Love~Love Paradise</td><td class="col-eps">20</td><td class="col-eps">6</td><td>Complete</td></tr>
-<tr><td>MyStreet S3: Lover's Lane</td><td class="col-eps">20</td><td class="col-eps">6</td><td>Complete</td></tr>
-<tr><td>MyStreet S4: Emerald Secret</td><td class="col-eps">25</td><td class="col-eps">10</td><td>Complete</td></tr>
-<tr><td>MyStreet S5: Starlight</td><td class="col-eps">25</td><td class="col-eps">10</td><td>Complete</td></tr>
-<tr><td>MyStreet S6: When Angels Fall</td><td class="col-eps">30</td><td class="col-eps">15</td><td>Complete</td></tr>
-<tr><td>MyStreet S7: One Last Time</td><td class="col-eps">—</td><td class="col-eps">—</td><td class="status-production">In Production</td></tr>
-<tr><td>Minecraft Diaries S1</td><td class="col-eps">100</td><td class="col-eps">28</td><td>Complete</td></tr>
-<tr><td>Minecraft Diaries S2</td><td class="col-eps">100</td><td class="col-eps">28</td><td>Complete</td></tr>
+<tr><td>MyStreet S1</td><td class="col-eps">35</td><td class="col-eps">10</td></tr>
+<tr><td>MyStreet S2: Love~Love Paradise</td><td class="col-eps">20</td><td class="col-eps">6</td></tr>
+<tr><td>MyStreet S3: Lover's Lane</td><td class="col-eps">20</td><td class="col-eps">6</td></tr>
+<tr><td>MyStreet S4: Emerald Secret</td><td class="col-eps">25</td><td class="col-eps">10</td></tr>
+<tr><td>MyStreet S5: Starlight</td><td class="col-eps">25</td><td class="col-eps">10</td></tr>
+<tr><td>MyStreet S6: When Angels Fall</td><td class="col-eps">30</td><td class="col-eps">15</td></tr>
+<tr><td>MyStreet S7: One Last Time</td><td class="col-eps">—</td><td class="col-eps">—</td></tr>
+<tr><td>Minecraft Diaries S1</td><td class="col-eps">100</td><td class="col-eps">28</td></tr>
+<tr><td>Minecraft Diaries S2</td><td class="col-eps">100</td><td class="col-eps">28</td></tr>
 </tbody>
 </table>
 </div>
@@ -1386,13 +1386,13 @@ footer{page-break-before:always}
 <div class="backlog-tier">
 <div class="backlog-tier-header"><span class="badge" style="background:rgba(234,179,8,0.15);color:var(--yellow)">Medium</span><h4>Spinoffs & Prequels</h4><span class="backlog-tier-hours">~41 hrs</span></div>
 <table>
-<thead><tr><th>Series</th><th class="col-eps">Episodes</th><th class="col-eps">Hours</th><th>Status</th></tr></thead>
+<thead><tr><th>Series</th><th class="col-eps">Episodes</th><th class="col-eps">Hours</th></tr></thead>
 <tbody>
-<tr><td>Phoenix Drop High S1</td><td class="col-eps">35</td><td class="col-eps">9</td><td>Complete</td></tr>
-<tr><td>Phoenix Drop High S2 (FCU)</td><td class="col-eps">25</td><td class="col-eps">7</td><td>Complete</td></tr>
-<tr><td>My Inner Demons</td><td class="col-eps">26</td><td class="col-eps">9</td><td>Complete</td></tr>
-<tr><td>Mermaid Tales</td><td class="col-eps">20</td><td class="col-eps">6</td><td>Partial/Revived</td></tr>
-<tr><td class="status-cancelled">Minecraft Diaries S3</td><td class="col-eps">37</td><td class="col-eps">10</td><td class="status-cancelled">Cancelled</td></tr>
+<tr><td>Phoenix Drop High S1</td><td class="col-eps">35</td><td class="col-eps">9</td></tr>
+<tr><td>Phoenix Drop High S2 (FCU)</td><td class="col-eps">25</td><td class="col-eps">7</td></tr>
+<tr><td>My Inner Demons</td><td class="col-eps">26</td><td class="col-eps">9</td></tr>
+<tr><td>Mermaid Tales</td><td class="col-eps">20</td><td class="col-eps">6</td></tr>
+<tr><td>Minecraft Diaries S3</td><td class="col-eps">37</td><td class="col-eps">10</td></tr>
 </tbody>
 </table>
 </div>
